--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
     <div class="tagline">Design, Manufacturing & Supply of Complete Hot Dip Galvanizing Plant</div>
 
     <!-- Buttons -->
-    <a class="btn" href="tel:+919724787093">📞 Call</a>
-    <a class="btn" href="https://wa.me/919724787093" target="_blank">💬 WhatsApp</a>
-    <a class="btn" href="mailto:radadiaeng@radadia.com">✉️ Email</a>
+    <a class="btn" href="tel:+919998016132">📞 Call</a>
+    <a class="btn" href="https://wa.me/919998016132" target="_blank">💬 WhatsApp</a>
+    <a class="btn" href="mailto:sales@radadiaengineering.com">✉️ Email</a>
     <a class="btn" href="https://www.radadiaengineering.com" target="_blank">🌐 Website</a>
-    <a class="btn" href="https://www.linkedin.com/company/radadia-engineering-private-limited" target="_blank">🔗 LinkedIn</a>
+    <a class="btn" href="https://www.linkedin.com/in/sweta-gandhi-450b431b7/" target="_blank">🔗 LinkedIn</a>
 
     <div class="footer">Save & Share This Card</div>
 
@@ -91,3 +91,4 @@
 
 </body>
 </html>
+
